# generative_ai

./: Makefile  README.md  pyproject.toml  requirements.txt
notebooks/1_project/: brochure_builder.ipynb  prompt.txt  prompt_2.txt
notebooks/2_project/: place_asistant.ipynb
notebooks/3_project/: hf_meetings.ipynb
notebooks/6_RAG/: rag-part-1.ipynb
