[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "src"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Isaac Menchaca" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "pip",
    "awscli",
    "requests",
    "dotenv",
    "bs4",
    "openai",
    "ipykernel",
    "tensorflow",
    "numpy",
    "transformers",
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["src"]
include = ["pyproject.toml", "src/**/*.py", "notebooks/**/*.ipynb"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["src", "notebooks"]
force-sort-within-sections = true

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 88  # For code blocks in notebook markdown cells

[tool.ruff.lint.per-file-ignores]
"notebooks/**/*.ipynb" = ["E402", "I001"]  # Ignore import order in notebooks

